# naf_naf_solution_wizard

./: .gitignore  NAF_NAF_Solution_Wizard.py  README.md  deployment_strategies.yml  naf_naf_solution_wizard.py  pyproject.toml  requirements.txt  stakeholders.json  test_stakeholders_category_mapping.py  test_stakeholders_full_flow.py  test_stakeholders_widget_init.py  test_title_roundtrip.py  use_case_categories.yml  utils.py  wizard_data.py
.devcontainer/: devcontainer.json
example_solution_output/naf_report_Automated_Configuration_Update_20251214_202606/: naf_report_Automated_Configuration_Update_20251214_202606.json  naf_report_Automated_Configuration_Update_20251214_202606.md
pages/: 10_NAF_Automation_UseCase.py  20_NAF_Solution_Wizard.py  90_Terms_and_Definitions.py
templates/: Solution_Design_Report.j2
tests/: TEST_README.md  test_author_field.py  test_author_upload.py  test_deployment_strategy_other.py  test_specific_fields.py  test_stakeholders_category_mapping.py  test_stakeholders_none.py  test_title_roundtrip.py  test_wizard_data_complete.py  test_wizard_utils.py
